<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="50" app:showAsAction="never"/> -->
    <item android:id="@+id/action_version" android:title="test"
        android:orderInCategory="50" app:showAsAction="never"
        />

    <item android:id="@+id/action_alarm" android:title="@string/action_alarm"
        android:orderInCategory="71" app:showAsAction="never"
        />
    <item android:id="@+id/action_invite" android:title="@string/action_invite"
        android:orderInCategory="82" app:showAsAction="never"
        />
    <item android:id="@+id/action_qna" android:title="@string/action_qna"
        android:orderInCategory="93" app:showAsAction="never"
        />

    <item android:id="@+id/action_logout" android:title="@string/action_logout"
        android:orderInCategory="100" app:showAsAction="never"
        />
     <!--<item android:id="@+id/action_prev" android:title="@string/action_prev"
         android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        android:orderInCategory="10" app:showAsAction="ifRoom"
        /> -->
    <item
        android:id="@+id/action_prev"
        android:title="@string/action_prev"
        app:actionLayout="@layout/menu_item_cart"
        android:orderInCategory="10"
        app:showAsAction="always">
    </item>
</menu>
