<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="#EAEAEA"
    tools:context=".AlarmSettingActivity"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_notifcation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/notification_setting1"
        android:layout_marginTop="20sp"
        android:textColor="#B7B7B7"
        android:textSize="12sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_setting2"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/notification_setting3"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:id="@+id/friend_message_noti"
            android:layout_marginRight="5dp"
            android:layout_gravity="right|center_vertical"
            android:src="@drawable/alarm_icon_on"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/notification_setting4"
        android:layout_marginTop="5sp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="20sp"
        android:textColor="#B7B7B7"
        android:textSize="12sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/notification_setting5"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="85dp"
            android:layout_marginRight="5dp"
            android:id="@+id/comment_status_noti"
            android:layout_gravity="right|center_vertical"
            android:src="@drawable/alarm_icon_off"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/notification_setting6"
        android:layout_marginTop="5sp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="20sp"
        android:textColor="#B7B7B7"
        android:textSize="12sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/notification_setting7"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160dp"
            android:layout_marginRight="5dp"
            android:id="@+id/comment_post_noti"
            android:layout_gravity="right|center_vertical"
            android:src="@drawable/alarm_icon_off"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/notification_setting8"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="20sp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="#B7B7B7"
        android:textSize="12sp"
        android:textStyle="bold"/>



</LinearLayout>