<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    tools:context=".AddFriendActivity"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/fb_people"
            android:layout_gravity="center"
            />


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:text="@string/connectToFaceBook"
            android:singleLine="true"
            android:textColor="@color/black"
            android:gravity="center"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginTop="20dp"
            android:text="@string/connectToFaceBook1"
            android:singleLine="true"
            android:textColor="@color/grey"
            android:gravity="center"/>


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginTop="5dp"
            android:text="@string/connectToFaceBook2"
            android:textColor="@color/grey"
            android:singleLine="true"
            android:gravity="center"/>


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginTop="5dp"
            android:text="@string/connectToFaceBook3"
            android:textColor="@color/grey"
            android:singleLine="true"
            android:gravity="center"/>

        <com.facebook.login.widget.LoginButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="50dp"
            android:id="@+id/connectBtn"/>
    </LinearLayout>

</LinearLayout>